# marketdatafeedhandler

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  build.bat  build.sh  build_manual.ps1  profile.sh
benchmarks/: full_pipeline_benchmark.cpp
data/: generate_sample_itch.py
include/: enhanced_order_book.hpp  iex_parser.hpp  itch_parser.hpp  latency_histogram.hpp  latency_tracker.hpp  lock_free_queue.hpp  marketdata_parser.hpp  memory_pool.hpp  order_book.hpp  pcap_reader.hpp  replay_engine.hpp  strategy.hpp  tick_recorder.hpp  timer.hpp  websocket_server.hpp
src/: advanced_benchmark.cpp  benchmark.cpp  enhanced_order_book.cpp  iex_parser.cpp  itch_parser.cpp  main.cpp  marketdata_parser.cpp  order_book.cpp  pcap_reader.cpp  replay_engine.cpp  strategy.cpp  tick_recorder.cpp  websocket_server.cpp
tests/: test_enhanced_order_book.cpp  test_iex_parser.cpp  test_itch_parser.cpp  test_lock_free_queue.cpp  test_memory_pool.cpp  test_order_book.cpp
